# bighomework_01

./: CMakeLists.txt  README.md  gamewindow.cpp  gamewindow.h  mainwindow1.cpp  mainwindow1.h  mainwindow1.ui  mydialog.cpp  mydialog.h  obstacle.cpp  obstacle.h  player.cpp  player.h  resouorce.qrc  widget.cpp  widget.h
